added bootstrap-sass dependency

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     ]
   },
   "keywords": [],
-  "description": ""
+  "description": "https://www.telerik.com/blogs/lets-build-a-financial-dashboard-with-react"
 }
